[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tass-converter"
version = "0.6.1"
authors = [
    {name = "Dominic Parent", email="dominic.parent@statcan.gc.ca"},
    {name = "Tyler Desjardins", email="josephgillestyler.desjardins@statcan.gc.ca"},
]
requires-python = ">3.8"
dependencies = [
    "openpyxl"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
