[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tass-core"

version = "1.0.0"

authors = [
    {name = "Dominic Parent", email="dominic.parent@statcan.gc.ca"},
    {name = "Tyler Desjardins", email="josephgillestyler.desjardins@statcan.gc.ca"},
]
requires-python = ">=3.10"
dependencies = [
    "selenium>=4.35.0",
	"openpyxl",
    "packaging",
    "jsonschema"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
